[tool.poetry]
name = "zxcursed"
version = "0.1.0"
description = "aye"
authors = ["Partur-dev <parturtwo@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
