[tool.poetry]
name = "zxcursed"
version = "0.1.0"
description = "aye"
authors = ["Partur-dev <parturtwo@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.scripts]
zxcursed = "zxcursed.scripts.zxcursed:main"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
